ubiquity (1.3.15) UNRELEASED; urgency=low

  * Add --old-partitioner command-line option to force the use of the old
    advanced partitioner even when it stops being the default. (Of course,
    this won't work for ever, as the old code will eventually be removed.)

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 30 Jan 2007 09:11:40 +0000

ubiquity (1.3.14) feisty; urgency=low

  * Use partman-efi on i386.
  * Ship an apport hook instead of calling apport directly from the GTK
    frontend.
  * New partitioner: Skip telling partman to edit method or mountpoint if
    either is left unchanged in the edit dialog.
  * Copy value of popularity-contest/participate into /target (LP: #78972).
  * Automatic update of included source packages: console-setup 1.13ubuntu6,
    partman-auto 62ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 29 Jan 2007 15:05:01 +0000

ubiquity (1.3.13) feisty; urgency=low

  * Automatic update of included source packages: base-installer
    1.70ubuntu2, console-setup 1.13ubuntu5, grub-installer 1.20ubuntu2,
    partman-base 100ubuntu3, partman-efi 11ubuntu1, silo-installer
    1.07ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 19 Jan 2007 11:56:06 +0000

ubiquity (1.3.12) feisty; urgency=low

  [ Colin Watson ]
  * KDE frontend: Fix crash going back from advanced partitioner (mentioned
    in Malone #78881).
  * Fix crash caused by incorrectly traversing into partman-auto's "Guided -
    use the largest continuous free space" option if present (LP: #76976).

  [ Brian Murray ]
  * Fix incorrect release date in intro message (LP: #78941).

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 14 Jan 2007 02:08:57 +0000

ubiquity (1.3.11) feisty; urgency=low

  * New partitioner: Fix crash while setting up partition edit dialog.
  * New partitioner: Indent partition names two spaces to the right of disk
    names.
  * GTK frontend: Drop privileges while invoking gconftool-2, and point it