@@ -3,6 +3,8 @@ ubiquity (1.3.15) UNRELEASED; urgency=low
   * Add --old-partitioner command-line option to force the use of the old
     advanced partitioner even when it stops being the default. (Of course,
     this won't work for ever, as the old code will eventually be removed.)
+  * GTK frontend: Disable gnome-volume-manager automounting for the entire
+    duration of installation (LP: #78862).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 30 Jan 2007 09:11:40 +0000
 
